add_subdirectory(utils)
add_subdirectory(devices)

# Utils
set (UTILS_SRCS ${UTILS_SRCS} PARENT_SCOPE)
set (UTILS_HEADERS ${UTILS_HEADERS} PARENT_SCOPE)
set (UTILS_HEADERS_WPATH ${UTILS_HEADERS_WPATH} PARENT_SCOPE)

# Message Parser
set (MSGPARSER_SRCS ${MSGPARSER_SRCS} PARENT_SCOPE)
set (MSGPARSER_HEADERS ${MSGPARSER_HEADERS} PARENT_SCOPE)
set (MSGPARSER_HEADERS_WPATH ${MSGPARSER_HEADERS_WPATH} PARENT_SCOPE)

# SDD
set (SDD_SRCS ${SDD_SRCS} PARENT_SCOPE)
set (SDD_HEADERS ${SDD_HEADERS} PARENT_SCOPE)
set (SDD_HEADERS_WPATH ${SDD_HEADERS_WPATH} PARENT_SCOPE)

# BaseDevice
set (BaseDevice_SRCS ${BaseDevice_SRCS} PARENT_SCOPE)
set (BaseDevice_HEADERS ${BaseDevice_HEADERS} PARENT_SCOPE)
set (BaseDevice_HEADERS_WPATH ${BaseDevice_HEADERS_WPATH} PARENT_SCOPE)
set (Main_BaseDevice_SRCS ${Main_BaseDevice_SRCS} PARENT_SCOPE)

# LMCInterface
set (LMCInterface_SRCS ${LMCInterface_SRCS} PARENT_SCOPE)
set (LMCInterface_HEADERS ${LMCInterface_HEADERS} PARENT_SCOPE)
set (LMCInterface_HEADERS_WPATH ${LMCInterface_HEADERS_WPATH} PARENT_SCOPE)
set (Main_LMCInterface_SRCS ${Main_LMCInterface_SRCS} PARENT_SCOPE)


set (INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

