add_subdirectory(Utils)
add_subdirectory(MessageParser)
add_subdirectory(SDD)

# Utils
set (UTILS_SRCS ${UTILS_SRCS} PARENT_SCOPE)
set (UTILS_HEADERS ${UTILS_HEADERS} PARENT_SCOPE)
set (UTILS_HEADERS_WPATH ${UTILS_HEADERS_WPATH} PARENT_SCOPE)

# Message Parser
set (MSGPARSER_SRCS ${MSGPARSER_SRCS} PARENT_SCOPE)
set (MSGPARSER_HEADERS ${MSGPARSER_HEADERS} PARENT_SCOPE)
set (MSGPARSER_HEADERS_WPATH ${MSGPARSER_HEADERS_WPATH} PARENT_SCOPE)

# SDD
set (SDD_SRCS ${SDD_SRCS} PARENT_SCOPE)
set (SDD_HEADERS ${SDD_HEADERS} PARENT_SCOPE)
set (SDD_HEADERS_WPATH ${SDD_HEADERS_WPATH} PARENT_SCOPE)

set (INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

